# LOdoo

./: .gitignore  .gitlab-ci.yml  README.rst  lodoo.py  requirements.txt  setup.cfg  setup.py
.ci/: test-cli.bash
.ci/v7/: README.md  init.bash  requirements.txt
.github/workflows/: ci.yml  release.yml
src/: lodoo.py
