[metadata]
name = lodoo
version = 0.5.5-a4
author = Dmytro Katyukha
author_email = dmytro.katyukha@gmail.com
description = CLI to manage Local Odoo
long_description = file: README.rst
url = https://github.com/katyukha/LOdoo
project_urls =
    Bug Tracker = https://crnd.pro/requests
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
license = MPL 2.0
keywords =
    odoo
    local

[options]
python_requires = >=2.7
package_dir =
    = src
py_modules =
    lodoo
install_requires=
    click; python_version >= '3.7'
    click<8.1; python_version < '3.7'
    click<8.0; python_version < '3.5'

[options.entry_points]
console_scripts =
    lodoo = lodoo:cli
